# daaa-ihw3

./: .gitattributes  .gitignore  README.md
DaAA_IHW_3/: CMakeLists.txt  main.cpp
Notebooks/: time_dimention.ipynb
Report/: report.docx
Tests/: test_time.csv
